# ChangeLog for net-misc/dahdi
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/net-misc/dahdi/ChangeLog,v 1.3 2010/04/13 12:04:21 chainsaw Exp $

*dahdi-2.2.1.1 (13 Apr 2010)

  13 Apr 2010; <chainsaw@gentoo.org> +dahdi-2.2.1.1.ebuild:
  Version bump, incorporating patches, bug reports, suggestions & other
  helpful input from Stefan Flemming, Michael Higgins, Oliver Jaksch, Jaco
  Kroon, Kerin "kerframil" Millar & Diego E. "Flameeyes" Pettenò. Closes
  bugs #296637, #302316, #302874, #305533, #308099 & #308467.

*dahdi-2.2.0.2 (22 Oct 2009)

  22 Oct 2009; <chainsaw@gentoo.org> +dahdi-2.2.0.2.ebuild,
  +files/dahdi-2.2.0.2-driver_data-2.6.32.patch,
  +files/dahdi-2.2.0.2-gcc44-hack.patch,
  +files/dahdi-2.2.0.2-includes.patch,
  +files/dahdi-2.2.0.2-net-device-ops.patch,
  +files/dahdi-2.2.0.2-no-depmod.patch:
  Version bump, closes bug #286829 by Jeremy Johnson. Build all target
  instead of modules target so echo cancellation becomes available, as
  suggested by Jay Pfeifer in bug #268652. Ported to 2.6.32 kernels (release
  candidate 5 at the time of writing), filed upstream bug. Quick hack for
  GCC4.4 compilation.

*dahdi-2.1.0.4 (10 Mar 2009)

  10 Mar 2009; <chainsaw@gentoo.org>
  +files/dahdi-2.1.0.4-netdev-2-6-29.patch,
  +files/dahdi-2.1.0.4-no-depmod.patch, +metadata.xml,
  +dahdi-2.1.0.4.ebuild:
  Initial commit, ebuild by Svoop & Rambaldi. Taken from the VoiP overlay
  but HPEC functionality removed as the decision logic is not portable to
  X86 architectures and looks fragile. Took 2.6.29 build fixes from upstream
  Digium bug #14285.
